--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,13 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "api/app.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb" }
-      }
+        {
+            "src": "api/app.py",
+            "use": "@vercel/python",
+            "config": { "maxLambdaSize": "15mb" }
+        }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "api/app.py" }
+        { "src": "/days_per_month", "dest": "api/app.py" }
     ]
-  }
-  
+}
